@@ -13,6 +13,8 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Allow more than one arch and more than one type of a package
     in debian/files. Parts of the patch by Goswin von Brederlow
     and Bastian Blank. Closes: #356299, #377400, #229143
+  * Allow building only architecture independent packages (-A).
+    Closes: #109794, #200454
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
